# ML3

./: .gitignore  01_Belagavi.shx  README.md  analysis_script.py  pyproject.toml
configs/: open_candidate_run.json  site_001_multisource_run.json  site_001_run.json
data/open/site_001/: after_scene.npz  before_scene.npz
docs/: ieee_paper_draft.tex  iteration_01_kgis_data_request.md  real_data_run_guide.md  research_and_pipeline.md
ml3/: __init__.py  __main__.py  api.py  cli.py  continuous.py  geometry.py  gis.py  ml_models.py  models.py  monitoring.py  open_industrial.py  real_data.py  reporting.py  tk_ui.py  workflows.py
scripts/: download_sentinel_open_site.py  update_config.py
templates/: kgis_premises_inventory_template.csv  multisource_real_run_config_template.json  real_run_config_template.json
